SET(LIBCAER_SRC_FILES
	ringbuffer/ringbuffer.c
	log.c
	events.c
	frame_utils.c
	device.c
	dvs128.c
	davis_common.c
	davis_fx2.c
	davis_fx3.c)

IF (ENABLE_OPENCV)
	# Add C++ OpenCV file and its C wrapper.
	SET(LIBCAER_SRC_FILES ${LIBCAER_SRC_FILES} frame_utils_opencv.cpp)
ENDIF()

SET(LIBCAER_SRC_FILES ${LIBCAER_SRC_FILES} PARENT_SCOPE)

IF (UNIX AND NOT APPLE)
	# Add --as-needed to linker flags for library.
	SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed")
ENDIF()

ADD_LIBRARY(caer SHARED ${LIBCAER_SRC_FILES})

SET_TARGET_PROPERTIES(caer
	PROPERTIES
	SOVERSION ${PROJECT_VERSION_MAJOR}
	VERSION ${PROJECT_VERSION_NOREV}
)

TARGET_LINK_LIBRARIES(caer ${LIBCAER_LIBS})

IF (OS_WINDOWS)
	INSTALL(TARGETS caer RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
ELSE()
	INSTALL(TARGETS caer DESTINATION ${CMAKE_INSTALL_LIBDIR})
ENDIF()
